# ThesisResearch

./: .gitignore  CMakeLists.txt  DecodingFromPaper.py  FindPortAudio.cmake  README.md
DistanceCalculation/RobotA/: mbed_app.json  platformio.ini
DistanceCalculation/RobotA/src/: main.cpp
DistanceCalculation/RobotB/: mbed_app.json  platformio.ini
DistanceCalculation/RobotB/src/: main.cpp
Matlab/: GenerateSNROverFile.m
PathCaches/: cache_My room - small cell_50cm.json
Python/: DecodeRecordedMessages.py  DecodingConvolution.py  DecodingFromPaper.py  GenerateMultipleSourceMessages.py  PlotCorrelationPropertiesChirp.py  ResearchDecoding.py  ResearchEncoding.py  ResearchHelperFunctions.py  ResearchMultipleSources.py  ResearchMultipleSourcesDistance.py  ResearchNoiseResistanceComm.py  ResearchPreambleBitsVsNoise.py  ResearchSymbolBitsVsNoise.py  Testnew  ThesisHelper.py  decodingClasses.py  determineDOA2.py  testje.py
Python/DOA/: EvaluationDOAFromFile.py  ExtractDOA.py
Python/DOA/LOS/: 100cm_0deg.txt  100cm_180deg.txt  100cm_270deg.txt  100cm_90deg.txt  150cm_0deg.txt  150cm_180deg.txt  150cm_270deg.txt  150cm_90deg.txt  200cm_0deg.txt  200cm_180deg.txt  200cm_270deg.txt  200cm_90deg.txt  250cm_0deg.txt  250cm_180deg.txt  250cm_270deg.txt  250cm_90deg.txt  25cm_0deg.txt  25cm_180deg.txt  25cm_270deg.txt  25cm_90deg.txt  300cm_0deg.txt  300cm_180deg.txt  300cm_270deg.txt  300cm_90deg.txt  350cm_0deg.txt  350cm_180deg.txt  350cm_270deg.txt  350cm_90deg.txt  50cm_0deg.txt  50cm_180deg.txt  50cm_270deg.txt  50cm_90deg.txt
Python/DOA/NLOS/: 100cm_0deg_nlos.txt  100cm_180deg_nlos.txt  100cm_270deg_nlos.txt  100cm_90deg_nlos.txt  150cm_0deg_nlos.txt  150cm_180deg_nlos.txt  150cm_270deg_nlos.txt  150cm_90deg_nlos.txt  200cm_0deg_nlos.txt  200cm_180deg_nlos.txt  200cm_270deg_nlos.txt  200cm_90deg_nlos.txt  250cm_0deg_nlos.txt  250cm_180deg_nlos.txt  250cm_270deg_nlos.txt  250cm_90deg_nlos.txt  25cm_0deg_nlos.txt  25cm_180deg_nlos.txt  25cm_270deg_nlos.txt  25cm_90deg_nlos.txt  300cm_0deg_nlos.txt  300cm_180deg_nlos.txt  300cm_270deg_nlos.txt  300cm_90deg_nlos.txt  350cm_0deg_nlos.txt  350cm_180deg_nlos.txt  350cm_270deg_nlos.txt  350cm_90deg_nlos.txt  50cm_0deg_nlos.txt  50cm_180deg_nlos.txt  50cm_270deg_nlos.txt  50cm_90deg_nlos.txt
Python/DOA/REVERB/: 100cm_0deg_reverb.txt  100cm_180deg_reverb.txt  100cm_270deg_reverb.txt  100cm_90deg_reverb.txt  150cm_0deg_reverb.txt  150cm_180deg_reverb.txt  150cm_270deg_reverb.txt  150cm_90deg_reverb.txt  200cm_0deg_reverb.txt  200cm_180deg_reverb.txt  200cm_270deg_reverb.txt  200cm_90deg_reverb.txt  250cm_0deg_reverb.txt  250cm_180deg_reverb.txt  250cm_270deg_reverb.txt  250cm_90deg_reverb.txt  25cm_0deg_reverb.txt  25cm_180deg_reverb.txt  25cm_270deg_reverb.txt  25cm_90deg_reverb.txt  300cm_0deg_reverb.txt  300cm_180deg_reverb.txt  300cm_270deg_reverb.txt  300cm_90deg_reverb.txt  350cm_0deg_reverb.txt  350cm_180deg_reverb.txt  350cm_270deg_reverb.txt  350cm_90deg_reverb.txt  50cm_0deg_reverb.txt  50cm_180deg_reverb.txt  50cm_270deg_reverb.txt  50cm_90deg_reverb.txt
Python/Graphs/: GraphsMessageEncoding.py
Python/LocalizationTable/: Algorithm_Execution_Order.txt  EvaluateParticleFilterPlots.py  EvaluationLocalizationTablePlots.py  EvaluationParticleFilter.py  Evaluation_approach_1.txt  Evaluation_approach_1_backup.txt  Evaluation_approach_2.txt  Evaluation_approach_3.txt  Evaluation_approach_mf_1.txt  LocalizationTable.py  LocalizationTableAlgorithm.py  MapRenderer.py  MessageFromRobot1.json  Particle.py  ParticleFilter.py  errors.txt
Python/LocalizationTable/Files/: LocalizationTable_0_1.csv  LocalizationTable_0_1_270_200.csv  LocalizationTable_0_1_270_300.csv  LocalizationTable_0_1_big_270_300.csv  LocalizationTable_0_1_old.csv  LocalizationTable_0_2_180_250.csv  LocalizationTable_1_0_90_300.csv  LocalizationTable_1_0_big_90_300.csv
Python/LocalizationTable/Map/: Cell.py  Door.py  Line.py  MapData.py  Path.py  Wall.py  middle_floor.json  myRoom_smallCells.json  rectangle.py
Python/LocalizationTable/Output/: r1.json  r1boe.json  r1r0.json
Python/MessagingCodec/: DecodeRecordedMessages.py  DecodingClasses.py  DecodingHelpers.py  EncodingHelpers.py  PlotAudioCodecResultsFromFile.py  PlotBitSamplesVsNoise.py  PlotConvolutionPeaksWavFile.py  PlotWavFileBit.py  PlotWavFileEncodedMessage.py  PlotWavFileIdentifier.py  PlotWavFilePreamble.py
Python/OLD_FILES/: DecodeRecordedMessages.py  DecodingFromPaper.py  DecodingFromPaperSmall.py  EvaluationDOA.py  GenerateMultipleSourceMessages.py  PlotCorrelationPropertiesChirp.py  ResearchBER.py  ResearchDecoding.py  ResearchDistancePerformance.py  ResearchHelperFunctions.py  ResearchMultipleSources.py  ResearchPreambleBitsVsNoise.py  ResearchPreambleUndersamplingVsNoise.py  ResearchSymbolBitsVsNoise.py  ThesisHelperRefactor.py  decodingClasses.py  determineDOA.py  determineDistanceFromFile.py  test.py
Python/Original_code/: OChirpEncode.py
lib/: CMakeLists.txt
lib/AStarAlgorithm/: aStarAlgorithm.cpp  aStarAlgorithm.h  aStarNode.cpp  aStarNode.h
lib/AudioCodec/: audioCodec.cpp  audioCodec.h  audioCodecBits.cpp
lib/AudioCodec_FS/: audioCodec.cpp  audioCodec.h
lib/AudioHelper/: audioHelper.cpp  audioHelper.h
lib/Config/: config.cpp  config.h
lib/FFTWrapper/: fftWrapper.cpp  fftWrapper.h
lib/MapRenderer/: mapRenderer.cpp  mapRenderer.h
lib/ParticleFilter/: Test.java  particle.cpp  particle.h  particleFilter.cpp  particleFilter.h
lib/ParticleFilter/Map/: building28 copy.json  building28.json  cell.cpp  cell.h  door.cpp  door.h  line.h  mapData.cpp  mapData.h  middle_floor.json  myRoom.json  myRoom_smallCells.json  path.cpp  path.h  rectangle.cpp  rectangle.h  wall.cpp  wall.h
lib/ParticleFilter/Table/: localizationTable.cpp  localizationTable.h
lib/RingBuffer/: ringBuffer.cpp  ringBuffer.h
lib/Util/: util.cpp  util.h
lib/WavHelper/: wavHelper.cpp  wavHelper.h
lib/WavReader/: wavReader.cpp  wavReader.h
realTimeTest/: real_time_test.c
sdlTest/: sdl_test.c
src/: config.json  main.cpp  main.h  oldFunctions.cpp  paex_sine_c++.cpp
(+480 files in other folders)
